--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
-        "yiisoft/yii2": "~2.0.15"
+        "php": ">=7.2.5"
     },
     "autoload": {
         "psr-4": {
